fixed morse code output with spacing and extra grammatical and numeral characters

--- a/morseCoder/style.css
+++ b/morseCoder/style.css
@@ -1,7 +1,29 @@
 /* CSS VAR for color background: #DAE9E4; */
 
-* {
-  margin: 0 auto;
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
 body {
   /* size: fit-content; */
@@ -56,16 +78,24 @@ body {
 .form {
   display: flex;
   flex-direction: column;
-  margin: auto;
+  margin-top: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
   align-items: center;
   padding: 15px;
 }
 .input-box {
-  height: 30px;
-  width: 150%;
+  display: flex;
+  height: 10%;
+  /* hard-coded, alter so it's responsive to the */
+  width: 350%;
   overflow: hidden;
   padding: 15px;
   margin-bottom: 15px;
+  border-radius: 5px;
+  box-sizing: border-box;
+  box-shadow: black;
 }
 #morseForm {
   display: flex;
@@ -75,11 +105,16 @@ body {
   background-color: lightgray;
 }
 #m-output {
-  margin: auto;
-  height: 150px;
-  width: 300px;
+  height: 25%;
+  width: 80%;
+  overflow: auto;
+  margin-top:  5px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom:auto;
   border: 1px solid black;
-  border-radius: 5%;
+  border-radius: 5px;
+  box-sizing: border-box;
   padding: 5px;
   background-color: aliceblue;
   font-size: large; /* Temporary size, I want it to dynamicallyresize itself*/
